[tool.poetry]
name = "mp3-signature-fixer"
version = "0.1.0"
description = ""
authors = ["Alejandro González Momblán <agelrenorenardo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hexdump = "3.3"
rich = "13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
